# EvoLens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/components/: BYOPanel.tsx  ExampleSelector.tsx  MetricCard.tsx  PedagogyPanel.tsx  PillarBadge.tsx  TextDisplay.tsx
dashboard/src/content/examples/: synthetic-examples.json
dashboard/src/content/pedagogy/: bertscore.json  bleu.json  perplexity.json  rouge.json
dashboard/src/lib/: metrics.ts
scripts/: precompute_examples.py
src/evolens/: __init__.py
src/evolens/calibration/: __init__.py  bertscore.py  bleu.py  perplexity.py  rouge.py
src/evolens/discrimination/: README.md  __init__.py
src/evolens/stability/: README.md  __init__.py
tests/: test_bertscore.py  test_bleu.py  test_perplexity.py  test_rouge.py
