[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evolens"
version = "1.0.0"
description = "Evaluation instrument for the calibration pillar of AI model validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paulo Cavallo" },
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sacrebleu>=2.3",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "transformers>=4.30",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
